--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					<!-- Site Logo -->
 					<div class="col-6 text-center mb-4">
 						<a href="/index.html">
-							<span class="logo">ゆる～くゆるキャラ</span>
+							<span class="logo">ゆる～く<br>ゆるキャラ</span>
 						</a>
 					</div>
 
