--- a/404.html
+++ b/404.html
@@ -224,6 +224,23 @@
 			<article class="m-3 row rounded">
 
 				<div class="col-4 p-2 w-100 h-100">
+					<a href="https://electric-circuit.github.io/">
+						<img class="img-thumbnail" src="/imgs/shapes/site5.svg" width="90" height="90">
+					</a>
+				</div>
+
+				<div class="col-8 p-2 w-100 h-100 text-left">
+					<a href="https://electric-circuit.github.io/">
+						<h4>「電気回路入門」様</h4>
+						<p><small>電気工学を幅広く学びたい方にお勧めです</small></p>
+					</a>
+				</div>
+
+			</article>
+
+			<article class="m-3 row rounded">
+
+				<div class="col-4 p-2 w-100 h-100">
 					<a href="https://nihon-farmura.github.io/">
 						<img class="img-thumbnail" src="/imgs/shapes/site6.svg" width="90" height="90">
 					</a>
@@ -249,7 +266,7 @@
 				<div class="col-8 p-2 w-100 h-100 text-left">
 					<a href="https://car-legends.github.io/">
 						<h4>「CarLegends」様</h4>
-						<p><small>...</small></p>
+						<p><small>世界の名車・珍車について徹底的に解説されています</small></p>
 					</a>
 				</div>
 
@@ -266,7 +283,7 @@
 				<div class="col-8 p-2 w-100 h-100 text-left">
 					<a href="https://overtime-worker.github.io/">
 						<h4>「残業戦士はお寿司が食べたい」様</h4>
-						<p><small>...</small></p>
+						<p><small>残業に苦しむサラリーマンの魂の叫びが綴られています</small></p>
 					</a>
 				</div>
 
@@ -283,7 +300,7 @@
 				<div class="col-8 p-2 w-100 h-100 text-left">
 					<a href="https://chocolate-teatime.github.io/">
 						<h4>「チョコっとTeatime」様</h4>
-						<p><small>...</small></p>
+						<p><small>何気ない日常の一コマを日記調に切り取っています</small></p>
 					</a>
 				</div>
 
