--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 
 					</ul>
     
-					<p class="h5 mt-5">© 2020 ゆる～くゆるキャラ</p>
+					<p class="black h5 mt-5">© 2020 ゆる～くゆるキャラ</p>
 
 				</div>
 			</div>
