--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
 					<h1 class="logo anime">ゆる～くゆるキャラ</h1>
 
 					<p class="mt-4">
-						<a class="btn btn-warning ml-sm-3 mr-3 mr-sm-0 mt-3 mt-sm-1" href="/index.html">ホーム</a>
-						<a class="btn btn-dark ml-sm-3 mr-3 mr-sm-0 mt-3 mt-sm-1" href="/about.html">サイト概要</a>
-						<a class="btn btn-dark ml-sm-3 mr-3 mr-sm-0 mt-3 mt-sm-1" href="/contact.html">お問い合わせ</a>
-						<a class="btn btn-dark ml-sm-3 mr-3 mr-sm-0 mt-3 mt-sm-1" href="/privacy_policy.html">個人情報保護方針</a>
+						<a class="btn btn-success badge-pill ml-sm-3 mr-3 mr-sm-0 mt-3 mt-sm-2" href="/index.html">ホーム</a>
+						<a class="btn btn-dark badge-pill ml-sm-3 mr-3 mr-sm-0 mt-3 mt-sm-2" href="/about.html">サイト概要</a>
+						<a class="btn btn-dark badge-pill ml-sm-3 mr-3 mr-sm-0 mt-3 mt-sm-2" href="/contact.html">お問い合わせ</a>
+						<a class="btn btn-dark badge-pill ml-sm-3 mr-3 mr-sm-0 mt-3 mt-sm-2" href="/privacy_policy.html">個人情報保護方針</a>
 					</p>
 
 				</div>
@@ -252,23 +252,6 @@
 					<a href="https://car-legends.github.io/">
 						<h4>「CarLegends」様</h4>
 						<p><small>世界の名車・珍車について徹底的に解説されています</small></p>
-					</a>
-				</div>
-
-			</article>
-
-			<article class="m-3 row rounded">
-
-				<div class="col-4 p-2 w-100 h-100">
-					<a href="https://yuru-chara.github.io/">
-						<img class="img-thumbnail" src="/imgs/shapes/site8.svg" width="90" height="90">
-					</a>
-				</div>
-
-				<div class="col-8 p-2 w-100 h-100 text-left">
-					<a href="https://yuru-chara.github.io/">
-						<h4>「ゆる～くゆるキャラ」様</h4>
-						<p><small>ゆる～いキャラクター達の情報が満載です</small></p>
 					</a>
 				</div>
 
