--- a/404.html
+++ b/404.html
@@ -132,10 +132,10 @@
 					<h1 class="logo anime">ゆる～くゆるキャラ</h1>
 
 					<p class="mt-4">
-						<a class="btn btn-dark ml-sm-3 mr-3 mr-sm-0 mt-3 mt-sm-1" href="/index.html">ホーム</a>
-						<a class="btn btn-dark ml-sm-3 mr-3 mr-sm-0 mt-3 mt-sm-1" href="/about.html">サイト概要</a>
-						<a class="btn btn-dark ml-sm-3 mr-3 mr-sm-0 mt-3 mt-sm-1" href="/contact.html">お問い合わせ</a>
-						<a class="btn btn-dark ml-sm-3 mr-3 mr-sm-0 mt-3 mt-sm-1" href="/privacy_policy.html">個人情報保護方針</a>
+						<a class="btn btn-dark badge-pill ml-sm-3 mr-3 mr-sm-0 mt-3 mt-sm-1" href="/index.html">ホーム</a>
+						<a class="btn btn-dark badge-pill ml-sm-3 mr-3 mr-sm-0 mt-3 mt-sm-1" href="/about.html">サイト概要</a>
+						<a class="btn btn-dark badge-pill ml-sm-3 mr-3 mr-sm-0 mt-3 mt-sm-1" href="/contact.html">お問い合わせ</a>
+						<a class="btn btn-dark badge-pill ml-sm-3 mr-3 mr-sm-0 mt-3 mt-sm-1" href="/privacy_policy.html">個人情報保護方針</a>
 					</p>
 
 				</div>
@@ -337,7 +337,7 @@
 
 					</ul>
     
-					<p class="h5 mt-5">© 2020 ゆる～くゆるキャラ</p>
+					<p class="black h5 mt-5">© 2020 ゆる～くゆるキャラ</p>
 
 				</div>
 			</div>
